# signal-tauri

./: .gitignore  ALL_ISSUES_RESOLVED.md  AVATAR_SYNC_INVESTIGATION.md  Cargo.toml  FIXES_APPLIED.md  FIX_PROFILE_KEY_SERIALIZATION.md  FIX_REGISTRATION_DATA.md  LICENSE  README.md  UI_FIXES_SUMMARY.md  cleanup_conversations.rs  cleanup_invalid_conversations.sql
src/: app.rs  main.rs
src/services/: mod.rs  notifications.rs  sync.rs  updates.rs
src/signal/: attachments.rs  contacts.rs  groups.rs  manager.rs  messages.rs  mod.rs  profiles.rs  provisioning.rs  registration.rs
src/signal/backup/: api.rs  crypto.rs  mod.rs
src/storage/: contacts.rs  conversations.rs  database.rs  encryption.rs  messages.rs  mod.rs  settings.rs
src/ui/: avatar_cache.rs  emoji_rasterizer.rs  mod.rs  theme.rs
src/ui/components/: avatar.rs  badge.rs  emoji_text.rs  message_bubble.rs  mod.rs
src/ui/views/: chat_list.rs  chat_view.rs  encryption_setup.rs  link_device.rs  main_view.rs  mod.rs  settings.rs  unlock_database.rs
src/ui/widgets/: emoji_picker.rs  mod.rs  search_bar.rs  voice_recorder.rs
