[package]
name = "signal-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Signal-Tauri Contributors"]
description = "A native Rust Signal Desktop client using egui"
license = "AGPL-3.0"
repository = "https://github.com/user/signal-tauri"

[dependencies]
# UI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "svg"] }

# Signal Protocol
presage = { git = "https://github.com/whisperfish/presage", rev = "66b56a77" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "66b56a77" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# QR Code for device linking
qrcode = "0.14"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
once_cell = "1"
parking_lot = "0.12"

# Notifications
notify-rust = "4"

# Audio for voice notes
rodio = "0.19"

# HTTP client for attachments
reqwest = { version = "0.12", features = ["json", "stream"] }

# URL handling
url = "2"

# Base64 encoding
base64 = "0.22"

# Clipboard
arboard = "3"

# Additional utilities
hostname = "0.4"
semver = "1"
mime_guess = "2"
getrandom = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Patch crates-io dependencies to use Signal's fork
# This resolves version conflicts between curve25519-dalek and curve25519-dalek-signal
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
