[package]
name = "signal-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Signal-Tauri Contributors"]
description = "A native Rust Signal Desktop client using egui"
license = "AGPL-3.0"
repository = "https://github.com/user/signal-tauri"

[[bin]]
name = "cleanup"
path = "cleanup_conversations.rs"

[dependencies]
# UI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "svg"] }
egui-twemoji = "0.5"

# Signal Protocol
# Updated to latest version (March 4, 2026) for:
# - Signal Desktop 8.0 compatibility (binary service IDs)
# - Critical deadlock fix in backpressure handling
# - HTTP 422 message reception fix
# - CDSI integration for improved contact sync
presage = { git = "https://github.com/whisperfish/presage", rev = "20d39de1" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "20d39de1" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# QR Code for device linking
qrcode = "0.14"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
once_cell = "1"
parking_lot = "0.12"

# Notifications
notify-rust = "4"

# Audio for voice notes
rodio = "0.19"

# HTTP client for attachments
# Use rustls to avoid macOS SecureTransport certificate issues
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-websocket = "0.4"

# Protocol buffers for Signal protocol
prost = "0.13"
bytes = "1.11.1"  # Updated to match presage requirement
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"

# URL handling
url = "2"
urlencoding = "2"

# Base64 encoding
base64 = "0.22"

# Compression
flate2 = "1"

# Hex encoding
hex = "0.4"

# Clipboard
arboard = "3"

# macOS dock icon support - fruitbasket provides runtime app bundle trampoline
[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10"

# Random number generation
rand = "0.9"

# Additional utilities
hostname = "0.4"
semver = "1"
mime_guess = "2"
getrandom = "0.3"

# SQLite database for app data (messages, conversations, settings)
# Using SQLCipher for at-rest encryption
# Using whisperfish fork to match presage-store-sqlite requirements (patched below)
rusqlite = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc", features = ["bundled-sqlcipher"] }
keyring = "3"
argon2 = "0.5"
unicode-segmentation = "1.12.0"
twemoji-assets = "1.5.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Patch crates-io dependencies to use Signal's fork
# This resolves version conflicts between curve25519-dalek and curve25519-dalek-signal
# Also patches rusqlite and libsqlite3-sys to use whisperfish fork with bundled-sqlcipher-custom-crypto feature
# Required by presage-store-sqlite for encrypted database support
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
rusqlite = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }
libsqlite3-sys = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }

[dev-dependencies]
tempfile = "3.24.0"
